UI template: fix header width on small screens

--- a/ui/templates/repository/css/header.css
+++ b/ui/templates/repository/css/header.css
@@ -1,5 +1,7 @@
 #header_wrapper {
 	background-color: #323232;
+	width: 100%;
+	min-width: 1170px;
 }
 
 #header .block {
