--- a/ui/templates/repository/css/layout.css
+++ b/ui/templates/repository/css/layout.css
@@ -5,6 +5,7 @@
 
 .wrapper .area {
 	width: 1170px;
+	min-width: 1170px;
 	padding-left: 30px;
 	padding-right: 30px;
 	margin-left: auto;
